자판 올라올 때 리사이클러뷰도 같이 올라가도록 수정.

--- a/app/src/main/res/layout/activity_group_room.xml
+++ b/app/src/main/res/layout/activity_group_room.xml
@@ -37,7 +37,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/group_info_layout"
-        android:layout_above="@+id/write_message_layout"/>
+        android:layout_above="@+id/write_message_layout"
+        android:windowSoftInputMode="adjustResize"/>
 
     <RelativeLayout
         android:id="@+id/write_message_layout"
