--- a/app/src/main/res/layout/activity_group_room.xml
+++ b/app/src/main/res/layout/activity_group_room.xml
@@ -57,7 +57,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_group_talk"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"/>
 
     </FrameLayout>
 
